--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "file_utils.h": "c"
+        "file_utils.h": "c",
+        "stdint.h": "c",
+        "string.h": "c",
+        "stdio.h": "c"
     }
 }
