--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,13 @@ set(CMAKE_C_STANDARD_REQUIRED True)
 
 include_directories(include)
 set(SOURCE_FILES
-    src/file_utils.c
+    src/filehandle.c
     test/test_insert.c
     test/test_fix.c
 )
 
+add_executable(test test/test.c src/filehandle.c)
 
-add_executable(test_insert unit_test/test_insert.c src/file_utils.c src/unity.c)
-add_executable(test_remove unit_test/test_remove.c src/file_utils.c src/unity.c)
-add_executable(test_fix unit_test/test_fix.c src/file_utils.c src/unity.c)
+add_executable(test_insert unit_test/test_insert.c src/filehandle.c src/unity.c)
+add_executable(test_remove unit_test/test_remove.c src/filehandle.c src/unity.c)
+add_executable(test_fix unit_test/test_fix.c src/filehandle.c src/unity.c)
