add func get_total_line, get_content, add test case.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,5 @@ add_executable(test test/test.c src/filehandle.c)
 add_executable(test_insert unit_test/test_insert.c src/filehandle.c src/unity.c)
 add_executable(test_remove unit_test/test_remove.c src/filehandle.c src/unity.c)
 add_executable(test_fix unit_test/test_fix.c src/filehandle.c src/unity.c)
+add_executable(test_get_total_lines unit_test/test_get_total_lines.c src/filehandle.c src/unity.c)
+add_executable(test_get_line_content unit_test/test_get_line_content.c src/filehandle.c src/unity.c)
